@@ -1,5 +1,11 @@
 2006-06-16  David Reveman  <davidr@novell.com>
 
+	* plugins/compiz.schemas.in.in: Regen.
+
+	* plugins/switcher.c:
+	* plugins/scale.c: Add modal dialogs and fullscreen windows
+	to default window types. (bnc 185749)
+
 	* gnome/window-decorator/gnome-window-decorator.c: Track motif
 	WM hints and disable decorations when application wants no
 	titlebar. (bnc 185852)
